fix off-centre field and added colons

--- a/public/index1.css
+++ b/public/index1.css
@@ -280,6 +280,7 @@ mark,
 }
 .text-center {
   text-align: center;
+  margin:auto;
 }
 .text-justify {
   text-align: justify;
